# autoannotator

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
assets/binaries/: ms_01_aligned.npy  ms_01_embedding_adaface.npy  ms_01_embedding_ensemble.npy  ms_01_embedding_insightface.npy
autoannotator/clustering/: __init__.py
autoannotator/clustering/core/: base_clustering.py
autoannotator/clustering/methods/: dbscan.py
autoannotator/config/: detection.py  feature_extraction.py  image_alignment.py
autoannotator/custom_ops/: __init__.py  custom_ops_mapping.py
autoannotator/detection/core/: base_detector.py
autoannotator/detection/faces/: __init__.py
autoannotator/detection/faces/models/: ensemble.py  scrfd.py  yolov7.py
autoannotator/detection/human/: __init__.py
autoannotator/detection/human/models/: ensemble.py  internimage.py  iter_detr.py  rtdetr.py  uhihcp.py
autoannotator/detection/utils/: test_time_augmentation.py  wbf.py
autoannotator/feature_extraction/: __init__.py
autoannotator/feature_extraction/core/: feature_extractor.py
autoannotator/feature_extraction/faces/: __init__.py
autoannotator/feature_extraction/faces/models/: __init__.py  ensemble.py  face_feature_extractor.py  model_adaface.py  model_insightface.py
autoannotator/types/: base.py  custom_typing.py  faces.py
autoannotator/utils/: algorithms.py  image_alignment.py  image_preprocessing.py  image_reader.py  image_visualization.py  misc.py  onnx_model_handler.py
autoannotator/weights/detection/faces/: scrfd_10g_kps.onnx  yolov7-w6-face.onnx
autoannotator/weights/feature_extraction/faces/: adaface_ir101_ms1mv3.onnx
docs/: human_detection.md
examples/: face_recognition_example.py  human_detection_example.py
tests/: test_InternImage_human_detection.py  test_clustering_dbscan.py  test_face_detection.py  test_face_feature_extractor.py  test_human_detection.py  test_image_alignment.py  test_unihcp_human_detection.py
