[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoannotator"
version = "0.0.1"
authors = [
  { name="Alexander FIlonenko", email="alexander@filonenko.net" },
  { name="Igor Popov", email="" },
]
description = "Automatic annotation of images library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD-3-Clause",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/CatsWhoTrain/autoannotator"
"Bug Tracker" = "https://github.com/CatsWhoTrain/autoannotator/issues"